added footer to output page

--- a/templates/main.html
+++ b/templates/main.html
@@ -27,6 +27,9 @@
             </div>
         </div>
     </div>
+    <div class="justify-content-center">
+        <p>Created with <a href="https://github.com/maxlemieux/engi-team-gen">engi-team-gen</a> | Copyright (c) 2020 by Max Lemieux</p>
+    </div>
 </body>
 
 </html>
