more styling and footer

--- a/output/style.css
+++ b/output/style.css
@@ -1,8 +1,19 @@
-.bg-manager {
-  background-color: fuchsia;
+html {
+  position: relative;
+  min-height: 100%; /* Make sure footer is at bottom of screen on short pages */
+}
+body {
+  margin: 0 auto;
+  padding-bottom: 60px; /* Match the height of the footer */
+}
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */  
 }
 
-.team-heading {
-  background-color: black;
-  color: silver;
+.bg-manager {
+  background-color: fuchsia;
 }
