--- a/templates/main.html
+++ b/templates/main.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 jumbotron mb-3 team-heading bg-dark text-light">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
@@ -27,9 +27,14 @@
             </div>
         </div>
     </div>
-    <div class="justify-content-center">
-        <p>Created with <a href="https://github.com/maxlemieux/engi-team-gen">engi-team-gen</a> | Copyright (c) 2020 by Max Lemieux</p>
+    <div class="my-3">
+        <p class="text-center small"></p>
     </div>
+    <footer class="bg-dark">
+        <!--Bottom margin set to 0 to sit flush with bottom of page-->
+        <p class="text-center small mb-0 text-muted">This page was built by <a href="https://github.com/maxlemieux/engi-team-gen">engi-team-gen</a>, a Node.js command-line app created by <a href="https://maxlemieux.github.io/">Max Lemieux</a></p>
+    </footer>
+
 </body>
 
 </html>
