--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,5 +1,5 @@
 <div class="card employee-card mx-2">
-    <div class="card-header bg-success text-white">
+    <div class="card-header bg-success text-light">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{{ role }}</h3>
     </div>
