added flex-wrap class to fix wrapping on large teams

--- a/templates/main.html
+++ b/templates/main.html
@@ -22,13 +22,10 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="card-deck team-area col-12 d-flex justify-content-center">
+            <div class="team-area col-12 d-flex flex-wrap justify-content-center">
                 {{ team }}
             </div>
         </div>
-    </div>
-    <div class="my-3">
-        <p class="text-center small"></p>
     </div>
     <footer class="bg-dark">
         <!--Bottom margin set to 0 to sit flush with bottom of page-->
